PlayerLaunchBtN: 100% width so prevent text cutoff

--- a/src/components/PlayerLaunchBtn/PlayerLaunchBtn.module.scss
+++ b/src/components/PlayerLaunchBtn/PlayerLaunchBtn.module.scss
@@ -4,6 +4,7 @@
 .container{
   display: grid;
   height: 7rem;
+  width: 100%;
   margin-left: 1rem;
   margin-bottom: 1rem;
   align-items: center;
